# LLM-Cache-Optimization

./: .gitignore  README.md  comprehensive_test_runner.py  config.yaml  data_map.txt  debug_gptcache.py  demo.py  diagnose.py  docker-compose.yml  environment.yml  faiss.index  performance_comparison.py  pyproject.toml  python313_test.py  requirements.txt  sqlite.db  test_enhanced_features.py  test_full_features.py  test_my_cache.py  test_thresholds.py  test_verification.py  verify_setup.py
.github/workflows/: ci.yml
.roo/rules-enhanced-cache-dev/: 01-project-guardrails.md  02-implementation-plan.md  03-testing-strategy.md  04-benchmarking-rules.md  05-reproducibility.md  06-style-quality.md  07-commit-and-branching.md  08-mean-gptcache-alignment.md  09-tool-usage-safety.md  10-reporting-checklist.md
benchmark/: __init__.py  analyze_results.py  benchmark_runner.py  generate_queries.py  smoke_test_basic_cache.py  warmup_cache.py
data/: large_test_queries.json  optimal_queries.json  optimal_results.json  optimal_results_summary.csv  prompts_large.json  queries.json  results.csv  test_large.json  test_queries.json  test_results.json  test_results_fixed.json  test_results_fixed_summary.csv
data/results/: COMPREHENSIVE_TEST_REPORT.md  FINAL_MEMORY_PROFILING_REPORT.md  FINAL_PERFORMANCE_COMPARISON_REPORT.md  benchmark_1753023989.json  benchmark_1753023989_summary.csv  benchmark_1753371947.json  benchmark_1753371947_summary.csv  benchmark_1753373506.json  benchmark_1753373506_summary.csv  benchmark_1753373519.json  benchmark_1753373519_summary.csv  benchmark_1753373534.json  benchmark_1753373547.json  (+3 more)
docker/: Dockerfile  Dockerfile.llama  entrypoint.sh
docs/: BEST_PRACTICES_AND_INSIGHTS.md  DESIGN.md  FINAL_PERFORMANCE_REPORT.md  LLM Cache Project Report.md  OPTIMIZATION_WORKFLOW.md  PRODUCTION_DEPLOYMENT.md  TECHNICAL_SUMMARY.md
project/: README.md  __init__.py  adapter.py  config.py  context.py  policy.py
src/: __init__.py
tests/: __init__.py  test_analyze.py  test_basic_cache.py  test_context_similarity.py  test_enhanced_cache_integration.py  test_pca_wrapper.py  test_tau_manager.py
(+12 files in other folders)
